[tool.poetry]
name = "luisa_postres"
version = "0.1.0"
description = ""
authors = ["David Cardozo <davidcardozo@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
